feat: adding create user option using POST add user
