# app/models/user.js
@@ -1,0 +1,37 @@
+const mongoose = require('mongoose');
+
+/**
+ * @description Create Schema model of User Data with Schema level data valiadtion
+ */
+const UserSchema = mongoose.Schema({
+    firstName: { type: String, required: true, validate: /^[a-zA-Z ]{3,30}$/ },
+    lastName: { type: String, required: true, validate: /^[a-zA-Z ]{1,30}$/ },
+    emailId: { type: String, required: true, validate: /^[a-zA-Z0-9+_.-]+@[a-zA-Z0-9]+[.]+[a-zA-Z]+$/ },
+    password: { type: String, required: true }
+}, {
+    timestamps: false
+});
+
+const User = mongoose.model('User', UserSchema)
+
+class UserModel {
+
+    /**
+    * @description Create method is to save the new User Data
+    * @param userdData is data sent from Services
+    * @return callback is used to callback Services includes error message or data
+    */
+    create = (userdata, callback) => {
+        const user = new User({
+            firstName: userdata.firstName,
+            lastName: userdata.lastName,
+            emailId: userdata.emailId,
+            password: userdata.password
+        });
+        user.save({}, (error, data) => {
+            return (error) ? callback(error, null) : callback(null, data);
+        });
+    }
+}
+
+module.exports= new UserModel();
