# app/routes/addressBook.js
@@ -1,5 +1,5 @@
 const addressBookController = require('../controllers/addressBook.js');
-
+const userController = require('../controllers/user.js');
 module.exports = (app) => {
 
     // Create a new addressBook
@@ -16,4 +16,8 @@ module.exports = (app) => {
 
     // Update a addressBook with addressBookId
     app.put('/update/addressBook/:addressBookId',  addressBookController.update);
+
+    // Create a new addressBook
+    app.post('/add/user', userController.create);
+
 }
